Add print headers func
